# cargo-plugin

./: Cargo.toml  README.md
assets/: lib.rs
src/: main.rs
