[package]
name = "cargo-plugin"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
description = "compile time plugins for your Rust projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Geal/cargo-plugin"

[dependencies]
toml = "^0.4"
handlebars = "^0.29"
serde = "^1.0"
serde_derive = "^1.0"
